--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -1,17 +1,65 @@
-// document object model
-// window -> document -> html -> head & body
-// each one is called node like head node, body node, text node
+<!-- document object model -->
+<!-- window -> document -> html -> head & body -->
+<!-- each one is called node like head node, body node, text node -->
+
+<!-- document.getElementById() get element by id -->
+
+<!-- .id => get id of that element -->
+
+<!-- .className => get class name of that element -->
+
+<!-- .getAttribute('class') => get the attribute value -->
+
+<!-- .setAttribute('class', 'test heading') => set Attribute values -->
+
+<!-- .style.backgroundColor = 'green' => set style elements -->
+
+<!-- .innerText => only displays which is visble in the browser -->
+
+<!-- .textContent => will display the entire text inside the html, even if it is hidden -->
+
+<!-- .innerHTML => will display everything including the html tags and values as well -->
+
+<!-- .getElementsByClassName('title') => will return html collection of elements with same class -->
+
+<!-- .querySelector('h2') => will return the first element with the same tag 
+.querySelector("#title") => for selecting element with id 
+.querySlecetor(".heading") => for selecting element with class 
+.querySelector('input[type="password"]') => select input element 
+css selectors can be used in .querySelector() -->
+
+
+<!-- .querySelectorAll('li') => will return a node list with the elements, node list isnt a pure array, use index for accessing specific element in the node list.
+Try to use forEach loop with node list or convert node list to array and do as you wish -->
+
+
+<!-- .getElementsByClassName('list-item') => returns a html collection of elements, forEach loop dosent work in html collection so we have to convert it to array using Array.from() -->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>DOM learning</title>
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading">DOM learning</h1>
+<body class="bg-black">
+    <div>
+        <h1 id="title" class="heading">DOM learning</h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type="password" name="" id="">
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+        </ul>
     </div>
 </body>
 </html>
